@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Leave a congregation
class LeaveCongregationCommand <<planned>>
class LeaveCongregationCommandHandler <<planned>> {
  +Handle(command: LeaveCongregationCommand): Task
}
class Member {
  +Guid Id
  +MemberStatus Status
}
class Listing {
  +Guid OwnerId
  +ListingStatus Status
}
class Session {
  +Guid MemberId
  +DateTimeOffset? RevokedAt
  +Revoke(asOf: DateTimeOffset): void
}
LeaveCongregationCommandHandler ..> LeaveCongregationCommand : handles
LeaveCongregationCommandHandler --> Member : sets planned Left state
LeaveCongregationCommandHandler --> Listing : archives active listings
LeaveCongregationCommandHandler --> Session : revokes all membership sessions
@enduml
